# numpy-chess-board

./: README.md  pyproject.toml
numpy_11/: img.ipynb
tests/: test_numpy_11.py
